tests/errors/sem.arg-count-mismatch.directive-call.or
main :: () -> void {
    @load "orso.or", 5;
};
